src/Components/Skeletons/Skeleton.css
.skeletonMain {
  width: 100%;
  height: 100vh;
  background: #f5f3f4;
}
.skeleton {
  -webkit-animation: skeleton-loading 1s linear infinite alternate;
  animation: skeleton-loading 1s linear infinite alternate;
}

@-webkit-keyframes skeleton-loading {
  0% {
    background-color: #c2cfd6;
  }
  100% {
    background-color: #f0f3f5;
  }
}

@keyframes skeleton-loading {
  0% {
    background-color: #c2cfd6;
  }
  100% {
    background-color: #f0f3f5;
  }
}
.skeletonCard {
  width: 90%;
  margin-left: 5%;
  height: 100px;
  border-radius: 5px;
  margin-top: 20px;
}

